--- a/index.html
+++ b/index.html
@@ -27,43 +27,104 @@
 
       <section class="kenntnisse seccion">
 
-        <div class="kenntnisse_1">
-          <h2>Adobeprogramme</h2>
-          <div class="kenn_adobe">
-            <div class="kenn_adobe_photoshop">
-              <h3>Photoshop</h3>
-              <div class="barra_photoshop"></div>
-            </div>
-            <div class="kenn_adobe_illustrator">
-              <h3>Illustrator</h3>
-              <div class="barra_illustrator"></div>
-            </div>
-            <div class="kenn_adobe_indesing">
-              <h3>Indesing</h3>
-              <div class="barra_indesing"></div>
-            </div>
-          </div> <!--kenn_adobe -->
-        </div>
+        <div class="box">
+            <h2 class="titulo">Kenntnisse</h2>
+            <div class="box_kenntnise">
 
-        <div class="kenntnisse_2">
-          <h2>Webprogramme</h2>
-          <div class="kenn_web">
-            <div class="kenn_web_html">
-              <h3>HTML</h3>
-              <div class="barra_html"></div>
+              <div class="box_skill">
+                <h3>Webprogramme</h3>
+                <div class="grupo_skill">
+
+                  <div class="skill">
+                    <h4>HTML</h4>
+                    <div class="barra">
+                      <div style="width: 95%" class="progreso__barra progreso__ht"></div>
+                    </div>
+                  </div>
+
+                  <div class="skill">
+                    <h4>CSS</h4>
+                    <div class="barra">
+                      <div style="width: 75%" class="progreso__barra progreso__cs"></div>
+                    </div>
+                  </div>
+
+                  <div class="skill">
+                    <h4>JavaScript</h4>
+                    <div class="barra">
+                      <div style="width: 20%" class="progreso__barra progreso__js"></div>
+                    </div>
+                  </div>
+                </div> <!--kenn_web -->
+              </div>
+
+              <div class="box_skill">
+                <h3>Adobeprogramme</h3>
+                <div class="grupo_skill">
+                  <div class="skill">
+                    <h4 class="nombre_skill">Photoshop</h4>
+                    <div class="barra">
+                      <div style="width: 80%" class="progreso__barra progreso__ph"></div>
+                    </div>
+                  </div>
+                  <div class="skill">
+                    <h4 class="nombre_skill">Illustrator</h4>
+                    <div class="barra">
+                      <div style="width: 70%" class="progreso__barra progreso__il"></div>
+                    </div>
+                  </div>
+                  <div class="skill">
+                    <h4 class="nombre_skill">Indesing</h4>
+                    <div class="barra">
+                      <div style="width: 90%" class="progreso__barra progreso__in"></div>
+                    </div>
+                  </div>
+                </div> <!--kenn_adobe -->
+              </div>
+
+              <div class="box_skill">
+                <h3>Andere Kenntnisse</h3>
+                <div class="grupo_skill">
+                  <div class="grupo_logos">
+                    <div class="logo"><img src="img/git_negro.svg" alt=""> </div>
+                    <div class="logo"><img src="img/sass_negro.svg" alt=""> </div>
+                    <div class="logo"><img src="img/prestashop.png" alt=""> </div>
+                    <div class="logo"><img src="img/plesk_negro.svg" alt=""> </div>
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="kenn_web_css">
-              <h3>CSS</h3>
-              <div class="barra_css"></div>
-            </div>
-            <div class="kenn_web_js">
-              <h3>JavaScript</h3>
-              <div class="barra_js"></div>
-            </div>
-          </div> <!--kenn_web -->
         </div>
 
       </section>
+
+      <section class="ausbildung seccion">
+        <div class="box">
+          <h2 class="titulo">Ausbildung</h2>
+          <div class="box_ausbildung">
+          </div>
+        </div>
+      </section>
+
+      <section class="sprache seccion">
+        <div class="box">
+          <h2 class="titulo">Sprache</h2>
+          <div class="box_sprache">
+          </div>
+        </div>
+      </section>
+
+      <section class="beruf seccion">
+        <div class="box">
+          <h2 class="titulo">Beruﬂicher Werdegang</h2>
+          <div class="box_beruf">
+          </div>
+        </div>
+      </section>
+      <footer>
+
+      </footer>
+
     </div> <!--contenedor-->
 
 
