--- a/index.html
+++ b/index.html
@@ -55,17 +55,19 @@
                       <div style="width: 20%" class="progreso__barra progreso__js"></div>
                     </div>
                   </div>
-                </div> <!--kenn_web -->
+                </div> <!--grupo skill web -->
               </div>
 
               <div class="box_skill">
                 <h3>Adobeprogramme</h3>
                 <div class="grupo_skill">
+
                   <div class="skill">
                     <h4 class="nombre_skill">Photoshop</h4>
                     <div class="barra">
                       <div style="width: 80%" class="progreso__barra progreso__ph"></div>
                     </div>
+
                   </div>
                   <div class="skill">
                     <h4 class="nombre_skill">Illustrator</h4>
@@ -79,7 +81,7 @@
                       <div style="width: 90%" class="progreso__barra progreso__in"></div>
                     </div>
                   </div>
-                </div> <!--kenn_adobe -->
+                </div> <!--grupo skill adobe -->
               </div>
 
               <div class="box_skill">
@@ -102,6 +104,28 @@
         <div class="box">
           <h2 class="titulo">Ausbildung</h2>
           <div class="box_ausbildung">
+
+            <div class="ausbildung-item">
+              <h3 class="aus-name">Kaufmann für Marketingkommunikation</h3>
+              <h4 class="aus-date">Lima (Perú)</h4>
+              <h4 class="aus-schule">Hochschule IPP</h4>
+              <p class="aus-description">Erstellung von Kommunikationskonzepten für Kampagnen und Einzelmaßnahmen</p>
+            </div>
+
+            <div class="ausbildung-item">
+              <h3 class="aus-name">Grafik-Designer</h3>
+              <h4 class="aus-date">Lima (Perú)</h4>
+              <h4 class="aus-schule">Hochschule Toulouse Lautrec</h4>
+              <p class="aus-description">Gestaltung und Layout von Werbung, Katalogen und Broschüren • Adobe Photoshop • Illustrator • Indesign</p>
+            </div>
+
+            <div class="ausbildung-item">
+              <h3 class="aus-name">Computer-Techniker</h3>
+              <h4 class="aus-date">Lima (Perú)</h4>
+              <h4 class="aus-schule">Hochschule CIBERTEC</h4>
+              <p class="aus-description">Reparatur und Wartung von Computern</p>
+            </div>
+
           </div>
         </div>
       </section>
