--- a/index.html
+++ b/index.html
@@ -5,151 +5,265 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap" rel="stylesheet">
   </head>
 
   <body>
-    <div class="contenedor">
-      <header class="seccion">
-        <div class="contenedor_header">
 
-          <div class="contenedor_yo">
-            <div class="mi_foto"></div>
-            <h1>Carlos <span>Morán</span></h1>
-          </div>
+    <header>
+      <div class="contenedor_header">
 
-          <div class="intro">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem ratione in beatae laborum! Hic nulla quam minima inventore, earum deleniti.</p>
-          </div>
+        <div class="contenedor_yo">
+          <div class="mi_foto"></div>
+          <h1>Carlos Morán</h1>
+          <p>...auf dem Weg zum Webentwickler</p>
+          <p><span></span></p>
+        </div>
 
-        </div><!--contenedor header-->
-      </header>
+      </div><!--contenedor header-->
+    </header>
 
-      <section class="kenntnisse seccion">
+    <section class="kenntnisse seccion contenedor">
 
-        <div class="box">
-            <h2 class="titulo">Kenntnisse</h2>
-            <div class="box_kenntnise">
+      <div class="box">
+          <h2 class="titulo">Kenntnisse</h2>
+          <div class="box_kenntnise">
 
-              <div class="box_skill">
-                <h3>Webprogramme</h3>
-                <div class="grupo_skill">
+            <div class="box_skill">
+              <h3>Webprogramme</h3>
+              <div class="grupo_skill">
 
-                  <div class="skill">
-                    <h4>HTML</h4>
-                    <div class="barra">
-                      <div style="width: 95%" class="progreso__barra progreso__ht"></div>
-                    </div>
-                  </div>
-
-                  <div class="skill">
-                    <h4>CSS</h4>
-                    <div class="barra">
-                      <div style="width: 75%" class="progreso__barra progreso__cs"></div>
-                    </div>
-                  </div>
-
-                  <div class="skill">
-                    <h4>JavaScript</h4>
-                    <div class="barra">
-                      <div style="width: 20%" class="progreso__barra progreso__js"></div>
-                    </div>
-                  </div>
-                </div> <!--grupo skill web -->
-              </div>
-
-              <div class="box_skill">
-                <h3>Adobeprogramme</h3>
-                <div class="grupo_skill">
-
-                  <div class="skill">
-                    <h4 class="nombre_skill">Photoshop</h4>
-                    <div class="barra">
-                      <div style="width: 80%" class="progreso__barra progreso__ph"></div>
-                    </div>
-
-                  </div>
-                  <div class="skill">
-                    <h4 class="nombre_skill">Illustrator</h4>
-                    <div class="barra">
-                      <div style="width: 70%" class="progreso__barra progreso__il"></div>
-                    </div>
-                  </div>
-                  <div class="skill">
-                    <h4 class="nombre_skill">Indesing</h4>
-                    <div class="barra">
-                      <div style="width: 90%" class="progreso__barra progreso__in"></div>
-                    </div>
-                  </div>
-                </div> <!--grupo skill adobe -->
-              </div>
-
-              <div class="box_skill">
-                <h3>Andere Kenntnisse</h3>
-                <div class="grupo_skill">
-                  <div class="grupo_logos">
-                    <div class="logo"><img src="img/git_negro.svg" alt=""> </div>
-                    <div class="logo"><img src="img/sass_negro.svg" alt=""> </div>
-                    <div class="logo"><img src="img/prestashop.png" alt=""> </div>
-                    <div class="logo"><img src="img/plesk_negro.svg" alt=""> </div>
+                <div class="skill">
+                  <h4>HTML</h4>
+                  <div class="barra">
+                    <div style="width: 95%" class="progreso__barra progreso__ht"></div>
                   </div>
                 </div>
-              </div>
+
+                <div class="skill">
+                  <h4>CSS</h4>
+                  <div class="barra">
+                    <div style="width: 75%" class="progreso__barra progreso__cs"></div>
+                  </div>
+                </div>
+
+                <div class="skill">
+                  <h4>JavaScript</h4>
+                  <div class="barra">
+                    <div style="width: 20%" class="progreso__barra progreso__js"></div>
+                  </div>
+                </div>
+              </div> <!--grupo skill web -->
             </div>
+
+            <div class="box_skill">
+              <h3>Adobeprogramme</h3>
+              <div class="grupo_skill">
+
+                <div class="skill">
+                  <h4 class="nombre_skill">Photoshop</h4>
+                  <div class="barra">
+                    <div style="width: 80%" class="progreso__barra progreso__ph"></div>
+                  </div>
+
+                </div>
+                <div class="skill">
+                  <h4 class="nombre_skill">Illustrator</h4>
+                  <div class="barra">
+                    <div style="width: 70%" class="progreso__barra progreso__il"></div>
+                  </div>
+                </div>
+                <div class="skill">
+                  <h4 class="nombre_skill">Indesing</h4>
+                  <div class="barra">
+                    <div style="width: 90%" class="progreso__barra progreso__in"></div>
+                  </div>
+                </div>
+              </div> <!--grupo skill adobe -->
+            </div>
+
+          </
+
+          div>
+      </div>
+
+    </section>
+
+    <section class="andere_kenntnisse fondo_blanco">
+
+      <h2>Andere Kenntnisse</h2>
+
+      <div class="grupo_skill">
+
+        <div class="grupo_logos contenedor">
+
+          <div class="logo">
+            <img src="img/git_negro.svg" alt="">
+            <div class="text_logo">
+              <h4>Git</h4>
+              <p>Versionskontrolle von Software</p>
+            </div>
+          </div>
+
+          <div class="logo">
+            <img src="img/sass_negro.svg" alt="">
+            <div class="text_logo">
+              <h4>Sass</h4>
+              <p>Präprozessor CSS</p>
+            </div>
+          </div>
+
+          <div class="logo">
+            <img src="img/prestashop.png" alt="">
+            <div class="text_logo">
+              <h4>Prestashop</h4>
+              <p>E-Commerce Plattform</p>
+            </div>
+          </div>
+
+          <div class="logo">
+            <img src="img/plesk_negro.svg" alt="">
+            <div class="text_logo">
+              <h4>Plesk</h4>
+              <p>Administrationspanel Server</p>
+            </div>
+          </div>
+
         </div>
+      </div>
+    </section>
 
-      </section>
+    <section class="ausbildung seccion contenedor">
+      <div class="box">
+        <h2 class="titulo">Ausbildung</h2>
+        <div class="box_ausbildung">
 
-      <section class="ausbildung seccion">
-        <div class="box">
-          <h2 class="titulo">Ausbildung</h2>
-          <div class="box_ausbildung">
+          <div class="ausbildung-item">
+            <h3 class="aus-name">Der komplette Web-Entwickler</h3>
+            <h4 class="aus-date">Aktuell ( Online-Kurs )</h4>
+            <h4 class="aus-schule">Udemy</h4>
+            <a class="link" href="https://www.udemy.com/share/1013eaAEMYeVlTQXkF/" target="_blank"> > Link den Kurs</a>
+          </div>
 
-            <div class="ausbildung-item">
-              <h3 class="aus-name">Kaufmann für Marketingkommunikation</h3>
-              <h4 class="aus-date">Lima (Perú)</h4>
-              <h4 class="aus-schule">Hochschule IPP</h4>
-              <p class="aus-description">Erstellung von Kommunikationskonzepten für Kampagnen und Einzelmaßnahmen</p>
-            </div>
+          <div class="ausbildung-item">
+            <h3 class="aus-name">Kaufmann für Marketingkommunikation</h3>
+            <h4 class="aus-date">Lima (Perú)</h4>
+            <h4 class="aus-schule">Hochschule IPP</h4>
+            <p class="aus-description">Erstellung von Kommunikationskonzepten für Kampagnen und Einzelmaßnahmen</p>
+          </div>
 
-            <div class="ausbildung-item">
-              <h3 class="aus-name">Grafik-Designer</h3>
-              <h4 class="aus-date">Lima (Perú)</h4>
-              <h4 class="aus-schule">Hochschule Toulouse Lautrec</h4>
-              <p class="aus-description">Gestaltung und Layout von Werbung, Katalogen und Broschüren • Adobe Photoshop • Illustrator • Indesign</p>
-            </div>
+          <div class="ausbildung-item">
+            <h3 class="aus-name">Grafik-Designer</h3>
+            <h4 class="aus-date">Lima (Perú)</h4>
+            <h4 class="aus-schule">Hochschule Toulouse Lautrec</h4>
+            <p class="aus-description">Gestaltung und Layout von Werbung, Katalogen und Broschüren • Adobe Photoshop • Illustrator • Indesign</p>
+          </div>
 
-            <div class="ausbildung-item">
-              <h3 class="aus-name">Computer-Techniker</h3>
-              <h4 class="aus-date">Lima (Perú)</h4>
-              <h4 class="aus-schule">Hochschule CIBERTEC</h4>
-              <p class="aus-description">Reparatur und Wartung von Computern</p>
-            </div>
+          <div class="ausbildung-item">
+            <h3 class="aus-name">Computer-Techniker</h3>
+            <h4 class="aus-date">Lima (Perú)</h4>
+            <h4 class="aus-schule">Hochschule CIBERTEC</h4>
+            <p class="aus-description">Reparatur und Wartung von Computern</p>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <section class="sprache seccion parallax">
+      <div class="box">
+        <h2 class="titulo">Sprachen</h2>
+
+        <div class="box_sprache contenedor">
+
+          <div class="spanisch circulo">
+            <h3>Spanisch</h3>
+            <h4>Muttersprache</h4>
+          </div>
+
+          <div class="deutsch circulo">
+            <h3>Deutsch</h3>
+            <h4>B2</h4>
+          </div>
+
+          <div class="englisch circulo">
+            <h3>Englisch</h3>
+            <h4>Technisch</h4>
+          </div>
+
+          <div class="circulo-1 redondo"></div>
+          <div class="circulo-2 redondo"></div>
+          <div class="circulo-3 redondo"></div>
+          <div class="circulo-4 redondo"></div>
+
+        </div>
+      </div>
+    </section>
+
+    <section class="beruf seccion contenedor">
+      <div class="box">
+        <h2 class="titulo">Beruﬂicher Werdegang</h2>
+
+        <div class="box_beruf">
+
+          <div class="grupe_beruf">
+            <h3>Küchenhilfe</h3>
+            <h4>04/2013 bis Aktuell (München)</h4>
+            <h5>Fleming's Hotels</h5>
+            <h5>Augustiner Ewiges Licht</h5>
+            <h5>Cafe & Restaurant Nasca</h5>
+
 
           </div>
-        </div>
-      </section>
 
-      <section class="sprache seccion">
-        <div class="box">
-          <h2 class="titulo">Sprache</h2>
-          <div class="box_sprache">
+          <div class="grupe_beruf">
+            <h3>Inhaber eines Onlineshops für Schreibwaren</h3>
+            <h4>12/2012 - 03/2013 (Spanien)</h4>
+            <h5>www.deoficina.es</h5>
+            <p class="arbeit__description">
+              <ul>
+                <li><span>Erstellung und Verwaltung von Vserver mit Plesk des Online-Shops</span></li>
+                <li><span>Kundenbetreuung</span></li>
+                <li><span>Konzeption und Realisierung des Online - Marketings</span></li>
+              </ul>
+            </p>
           </div>
-        </div>
-      </section>
 
-      <section class="beruf seccion">
-        <div class="box">
-          <h2 class="titulo">Beruﬂicher Werdegang</h2>
-          <div class="box_beruf">
+          <div class="grupe_beruf">
+            <h3>Mediengestalter</h3>
+            <h4>03/2006 - 07/2011 (Spanien)</h4>
+            <h5>Makro Paper S.L – Großhandel Schreibwaren</h5>
+            <p class="arbeit__description">
+              <ul>
+                <li><span>Abteilungsleiter für Grafik-Design und Marketing</span></li>
+                <li><span>Gestalten & Visuelle Kommunikation</span></li>
+                <li><span>Typografie</span></li>
+                <li><span>Digitale Bildbearbeitung (Photoshop)</span></li>
+                <li><span>Gestaltung und Illustrierung von Katalogen, Anzeigen, Broschüren und Prospekten.</span></li>
+                <li><span>Printpublishing</span></li>
+                <li><span>Druckvorstufe</span></li>
+                <li><span>Produktionsprozess – Papier, Satz, Druck, Repro</span></li>
+              </ul>
+            </p>
           </div>
+
         </div>
-      </section>
-      <footer>
+      </div>
+    </section>
 
-      </footer>
+    <div class="curriculum">
+      <a href="/img/Lebenslauf_Carlos_Moran.pdf" download>Lebenslauf herunterladen
+      </a>
+    </div>
 
-    </div> <!--contenedor-->
+    <footer>
+      <div class="box_footer contenedor ">
+        <h4 class="nombre">Juan Carlos Morán Pacheco</h4>
+        <h4 class="email">jc.moran.pacheco@gmail.com</h4>
+        <h4 class="telefono">0159 022 93086</h4>
+      </div>
+    </footer>
+
 
 
   </body>
