--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="contenedor_yo">
           <div class="mi_foto"></div>
           <h1>Carlos Morán</h1>
-          <p>...auf dem Weg zum Webentwickler</p>
+          <!-- <p>...auf dem Weg zum Webentwickler</p> -->
           <p><span></span></p>
         </div>
 
@@ -50,7 +50,7 @@
                 <div class="skill">
                   <h4>JavaScript</h4>
                   <div class="barra">
-                    <div style="width: 20%" class="progreso__barra progreso__js"></div>
+                    <div style="width: 70%" class="progreso__barra progreso__js"></div>
                   </div>
                 </div>
               </div> <!--grupo skill web -->
@@ -133,6 +133,28 @@
       </div>
     </section>
 
+    <section class="seccion contenedor">
+         <div class="portafolie">
+              <h2 class="titulo">Portafolio</h2>
+              <div class="portafolie-inhalte">
+                   <div class="proyekt">
+                        <h3 class="titel-proyekt">Immobilien</h3>
+                        <div class="imagem"><img src="img/projekt-1.jpg" alt=""> </div>
+                   </div>
+                   <div class="proyekt">
+                        <h3 class="titel-proyekt">Store-T Shirt</h3>
+                        <div class="imagem"><img src="" alt=""> </div>
+                   </div>
+                   <div class="proyekt">
+                        <h3 class="titel-proyekt">Konferenz</h3>
+                        <div class="imagem"><img src="" alt=""> </div>
+                   </div>
+
+              </div>
+
+         </div>
+    </section>
+
     <section class="ausbildung seccion contenedor">
       <div class="box">
         <h2 class="titulo">Ausbildung</h2>
@@ -142,7 +164,7 @@
             <h3 class="aus-name">Der komplette Web-Entwickler</h3>
             <h4 class="aus-date">Aktuell ( Online-Kurs )</h4>
             <h4 class="aus-schule">Udemy</h4>
-            <a class="link" href="https://www.udemy.com/share/1013eaAEMYeVlTQXkF/" target="_blank"> > Link den Kurs</a>
+            <a class="link" href="https://www.udemy.com/course/web-entwickler-masterclass/" target="_blank"> > Link zum Kurs</a>
           </div>
 
           <div class="ausbildung-item">
@@ -150,6 +172,7 @@
             <h4 class="aus-date">Lima (Perú)</h4>
             <h4 class="aus-schule">Hochschule IPP</h4>
             <p class="aus-description">Erstellung von Kommunikationskonzepten für Kampagnen und Einzelmaßnahmen</p>
+            <p>Nicht Abgeschlossen</p>
           </div>
 
           <div class="ausbildung-item">
@@ -207,7 +230,7 @@
         <div class="box_beruf">
 
           <div class="grupe_beruf">
-            <h3>Küchenhilfe</h3>
+            <h3>Küchenhilfe ( akt. in Kurzarbeit )</h3>
             <h4>04/2013 bis Aktuell (München)</h4>
             <h5>Fleming's Hotels</h5>
             <h5>Augustiner Ewiges Licht</h5>
