--- a/index.html
+++ b/index.html
@@ -133,26 +133,30 @@
       </div>
     </section>
 
-    <section class="seccion contenedor">
-         <div class="portafolie">
+    <section class="portafolie seccion">
+         <div class="contenedor">
               <h2 class="titulo">Portafolio</h2>
               <div class="portafolie-inhalte">
-                   <div class="proyekt">
-                        <h3 class="titel-proyekt">Immobilien</h3>
-                        <div class="imagem"><img src="img/projekt-1.jpg" alt=""> </div>
-                   </div>
-                   <div class="proyekt">
-                        <h3 class="titel-proyekt">Store-T Shirt</h3>
-                        <div class="imagem"><img src="" alt=""> </div>
-                   </div>
-                   <div class="proyekt">
-                        <h3 class="titel-proyekt">Konferenz</h3>
-                        <div class="imagem"><img src="" alt=""> </div>
-                   </div>
+                <div class="proyekt">
+                      <h3 class="titel-proyekt">Konferenz</h3>
+                      <div class="imagem"><img src="img/projekt-3.jpg" alt=""> </div>
+                      <p>HTML - CSS - JavaScript - jQuery - PHP</p>
+                </div>
+                <div class="proyekt">
+                    <h3 class="titel-proyekt">Immobilien</h3>
+                    <div class="imagem"><img src="img/projekt-1.jpg" alt=""> </div>
+                    <p>HTML - CSS - Responsive</p>
+                </div>
+                <div class="proyekt">
+                    <h3 class="titel-proyekt">Store-T Shirt</h3>
+                    <div class="imagem"><img src="img/projekt-2.jpg" alt=""> </div>
+                    <p>HTML - CSS - Responsive</p>
+                </div>
 
-              </div>
+            </div> <!-- portafolie-inhalte-->
 
-         </div>
+         </div> <!-- contenedor -->
+
     </section>
 
     <section class="ausbildung seccion contenedor">
